<resources>
    <string name="app_name">Fitness</string>
    <string name="shape_your_body">Shape Your Body</string>
    <string name="boost_your_knowledge_on_the_blog_find_your_fit_with_wear_and_gear">Boost your knowledge on the blog.Find your fit with wear and gear.</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">LOGIN</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="please_enter_your_email_address_you_will_recieve_a_link_to_create_a_new_password_via_email">Please enter your email address. You will recieve a link to create a new password via email.</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="create_your_account">Create your account</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="by_clicking_sign_up_you_agree_to_the_following">By clicking Sign up you agree to the following</string>
    <string name="without_reservation">without reservation</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="hello">Hello</string>
    <string name="john_cena">John Cena</string>
    <string name="let_s_continue_your_fitness_challenge.">Let\'s continue your fitness challenge.</string>
    <string name="start">Start</string>
    <string name="today_s_workout">Today\'s workout</string>
    <string name="_12_exercises">12 Exercises</string>
    <string name="_7_exercises_completed">7 Exercises completed</string>
    <string name="quads_amp_deltoids"><![CDATA[Quads & Deltoids]]></string>
    <string name="conect_your_device">Conect your device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connect_your_device">Connect your device</string>
    <string name="turn_on_your_bluetooth">Turn on your bluetooth</string>
    <string name="single_tap_to_connect_your_device">Single tap to connect your device</string>
    <string name="connect">CONNECT</string>
    <string name="member_since_june_2020">Member since June 2020</string>
    <string name="_178cm">178cm</string>
    <string name="height">Height</string>
    <string name="_24">24</string>
    <string name="years_old">Years old</string>
    <string name="_78_kg">78 kg</string>
    <string name="weight">Weight</string>
    <string name="badges">BADGES</string>
    <string name="stats">STATS</string>
    <string name="history">HISTORY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_workout">Best workout</string>
    <string name="_27_exercises_completed">27 exercises completed</string>
    <string name="_12">12</string>
    <string name="lap">Lap</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="workout">Workout</string>
    <string name="preview_workout">Preview Workout</string>
    <string name="exercises">Exercises</string>
    <string name="_5_seats">5 seats</string>
    <string name="_10_12_reps">10-12 reps</string>
    <string name="_50_sec">50 sec</string>
    <string name="dumbbell_rows">Dumbbell rows</string>
    <string name="_2_seats">2 seats</string>
    <string name="_29_35_reps">29-35 reps</string>
    <string name="_70_sec">70 sec</string>
    <string name="_3_seats">3 seats</string>
    <string name="_20_25_reps">20-25 reps</string>
    <string name="_30_sec">30 sec</string>
    <string name="start_workout">START WORKOUT</string>
    <string name="jenishbaka12_gmail_com">jenishbaka12@gmail.com</string>
    <string name="please_add_a_valid_phone_number">Please add a valid phone number</string>
    <string name="change_password">Change password</string>
    <string name="nontifications">Nontifications</string>
    <string name="change_nontifications_setting">Change nontifications setting</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="reactivate_your_account_anytime">Reactivate your account anytime</string>
</resources>